--- a/Audio Example.html
+++ b/Audio Example.html
@@ -6,16 +6,24 @@
   <title>Audio Example</title>
 </head>
 <body>
-  <h1>Listen to My Audio</h1>
+    <div>
+  <h1>Listen to My Audio 1</h1>
   <audio controls>
     <source src="https://raw.githubusercontent.com/DevOps-2020Insight/2020-Media/main/Audio/THAGAMOSO-KARABO-MASHUGANE-08-MAY-2024.mp3" type="audio/mpeg">
-    <br>
-    <h1>Listen to My Audio</h1>
+</audio> <br></div>
+
+    <div>
+    <h1>Listen to My Audio 2</h1>
+    <audio controls>
     <source src="https://raw.githubusercontent.com/DevOps-2020Insight/2020-Media/main/Audio/THAGAMOSO-KARABO-MASHUGANE-24-APRIL-2024.mp3" type="audio/mpeg">
-    <br>
-    <h1>Listen to My Audio</h1>
+</audio><br></div>
+
+    <div>
+    <h1>Listen to My Audio 3</h1>
+    <audio controls>
     <source src="https://raw.githubusercontent.com/DevOps-2020Insight/2020-Media//main/Audio/classic_business_28_nov_roundtable_the_business_models_needed_to_stimulate_the_sa_economy_high-1-1.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+</div>
 </body>
 </html>
